BUG FIX:  Text entry now supports puntuation while holding Shift
CHANGE:  AutoGen now only generated dance->pump and pump->dance to cut
	down on initial load time
CHANGE:  Texure cache disabled because of performance problems on low memory 
	systems.  If you have >= 128MB memory, you may want re-enable it by 
	setting UnloadTextureDelaySeconds=1800.
	
------------------------CVS after 3.00 beta 6----------------
CHANGE:  Missing a jump with the Oni life meter now subtracts only 1 life.
CHANGE:  Judge difficulty strictness increased slightly.
CHANGE:  Initial sort order now sorts by meter of Easy notes, ala MAX.
BUG FIX:  DWI music sample info now read correctly - again.
NEW FEATURE:  Precise adjustment of timing window for each grade via the
	stepmania.ini file (see JudgeWindowPerfectPercent, JudgeWindowGreatPercent,
	etc).
OPTIMIZATION:  Better texture caching algorithm for faster loading of menus.
NEW FEATURE: Ez2SelectStyle ScrollingList Contents now Metric Configurable.
NEW FEATURE: PPP and PUMP use Ez2SelectStyle Menus to become more
	arcade-accurate.
NEW FEATURE: Ez2SelectStyle Menu Background Animations Metric Configurable
NEW FEATURE: ParaParaParadise Support
NEW FEATURE:  Added transliteration support for song titles, subtitles & artist
	names.  Tags are #TITLETRANSLIT, #SUBTITLETRANSLIT & #ARTISTTRANSLIT
	respectively.  The transliterations of the title and subtitle are used when 
	sorting	and grouping songs, so non-latin songs can be placed correctly
NEW FEATURE:  DWI tree loading via "DWIPath".
NEW FEATURE:  Pump couples support.
BUG FIX:  Editor no longer crashes if you try to drag a hold note up
	before beat 0.
CHANGE:  Hold head now drawn in place tap note graphic when a Hold starts
	on the same row.
CHANGE:  Added bright ghost flash on hold note score of OK.
CHANGE:  Font format new easier to export for font creators.  See README 
	for details.
NEW FEATURE:  Option Icons.
NEW FEATURE:  Best sort now shows only top 30 songs.